--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.14",
+    "vercel": "^41.5.0",
     "vite-plugin-pwa": "^0.21.1"
   },
   "devDependencies": {
