change style and gallery

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@barba/core": "^2.10.3",
     "@tailwindcss/vite": "^4.0.14",
     "barba.js": "^1.0.0",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.11.7",
     "framer-motion": "^12.7.4",
     "gh-pages": "^6.3.0",
     "gsap": "^3.12.7",
+    "image-size": "^2.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
