--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@barba/core": "^2.10.3",
@@ -19,7 +18,6 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.7.4",
-    "gh-pages": "^6.3.0",
     "gsap": "^3.12.7",
     "image-size": "^2.0.2",
     "lottie-react": "^2.4.1",
