--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@barba/core": "^2.10.3",
     "@tailwindcss/vite": "^4.0.14",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "barba.js": "^1.0.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
